# learn-astropy-tutorial-theme

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
src/learnastropytutorialtheme/: html.py  tocpreprocessor.py
src/learnastropytutorialtheme/templates/html/: astropy-header.html.j2  astropy-sidebar.html.j2  astropytutorial.css  index.html.j2
tests/: color-excess.ipynb  test_html.py
tests/support/: helpers.py
