[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "learn-astropy-tutorial-theme"
description = "An nbconvert custom exporter and theme for Learn Astropy tutorials."
license = {file = "LICENSE"}
readme= "README.md"
keywords = [
    "astropy",
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "nbconvert",
    "markdown-it-py",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pre-commit",
    "mypy",
]

[project.urls]
Source = "https://github.com/jsickcodes/learn-astropy-tutorial-theme"

[project.entry-points."nbconvert.exporters"]
learn-astropy = "learnastropytutorialtheme.html:LearnAstropyExporter"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ["src"]
include = ["learnastropytutorialtheme*"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.black]
line-length = 79
target-version = ["py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
# Use single-quoted strings so TOML treats the string like a Python r-string
#  Multi-line strings are implicitly treated by black as regular expressions


[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["learnastropytutorialtheme", "tests"]
skip = ["docs/conf.py"]

[tool.pytest.ini_options]
python_files = [
    "tests/*.py",
    "tests/*/*.py"
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
# plugins =
